testdata/baselines/reference/submodule/compiler/jsxChildrenArrayWrongType.errors.txt
react18/react18.d.ts(39,22): error TS2307: Cannot find module 'csstype' or its corresponding type declarations.
react18/react18.d.ts(40,28): error TS2307: Cannot find module 'prop-types' or its corresponding type declarations.
react18/react18.d.ts(41,53): error TS2307: Cannot find module 'scheduler/tracing' or its corresponding type declarations.
react18/react18.d.ts(230,10): error TS2456: Type alias 'ReactFragment' circularly references itself.
react18/react18.d.ts(230,26): error TS2304: Cannot find name 'Iterable'.
react18/react18.d.ts(231,10): error TS2456: Type alias 'ReactNode' circularly references itself.
index.tsx(11,6): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type '{ children: [unknown, string]; }' is not assignable to type 'Readonly<PropsType>'.
      Types of property 'children' are incompatible.
        Type '[unknown, string]' is not assignable to type 'boolean[] | [string, number]'.
          Type '[unknown, string]' is not assignable to type '[string, number]'.
            Type at position 0 in source is not compatible with type at position 0 in target.
              Type 'unknown' is not assignable to type 'string'.


==== index.tsx (1 errors) ====
    /// <reference path="/.lib/react18/react18.d.ts" />
    /// <reference path="/.lib/react18/global.d.ts" />
    
    // target is ES5, so no `Iterable` type is present.
    
    interface PropsType {
        children: [string, number] | boolean[];
    }
    declare class Foo extends React.Component<PropsType, {}> {}
    const b = (
        <Foo>
         ~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type '{ children: [unknown, string]; }' is not assignable to type 'Readonly<PropsType>'.
!!! error TS2769:       Types of property 'children' are incompatible.
!!! error TS2769:         Type '[unknown, string]' is not assignable to type 'boolean[] | [string, number]'.
!!! error TS2769:           Type '[unknown, string]' is not assignable to type '[string, number]'.
!!! error TS2769:             Type at position 0 in source is not compatible with type at position 0 in target.
!!! error TS2769:               Type 'unknown' is not assignable to type 'string'.
!!! related TS2771 react18/react18.d.ts:478:9: The last overload is declared here.
            {<div/> as unknown}
            {"aa"}
        </Foo>
    );